fix: minor problem

--- a/task-one/style.css
+++ b/task-one/style.css
@@ -35,6 +35,7 @@ body {
 
 .tabs .tabs__content {
   display: none;
+  width: 100%;
   padding: 0.5rem;
   background-color: var(--clr-lightgray);
 }
